# chip8_interpreter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: Configuration.h  Emulator.h  Instructions.h  Interface.h  Interpreter.h  Memory.h  RomParser.h
include/register/: Register.h  RegisterManager.h  Stack.h
src/: Configuration.cpp  Emulator.cpp  Instructions.cpp  Interface.cpp  Interpreter.cpp  Memory.cpp  RegisterManager.cpp  RomParser.cpp  main.cpp
test/: init.cpp  instructions.cpp
